--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </table>
 
     <p>Experience:<a href="resume.html">Resume</a></p>
-    <p>Github:</p>
-    <p>Current project:</p>
+    <p>Github:https://github.com/PolarArk</p>
+    <p>Current project: Tyree's Cake Box and My Personal Portfolio :)</p>
     <p>I am a student at Tennessee College of Applied Technology. I am currently studying Amazon Web Services and Full stack Web developemt. I am currently working at Amazon as IT support II.</p>
     <hr>
       <h1>Skills</h1>
