--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </table>
 
     <p>Experience:<a href="resume.html">Resume</a></p>
-    <p>Github:https://github.com/PolarArk</p>
+    <p>Github:<a href="https://github.com/PolarArk">PolarArk</p>
     <p>Current project: Tyree's Cake Box and My Personal Portfolio :)</p>
     <p>I am a student at Tennessee College of Applied Technology. I am currently studying Amazon Web Services and Full stack Web developemt. I am currently working at Amazon as IT support II.</p>
     <hr>
